# LlamaBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  DockerfileVsCode  IMPLEMENTATION_PLAN.md  LLAMABOT_JAVASCRIPT_REUSABILITY.md  README.md  RUNTIME.txt  S3_CDN_DEPLOYMENT.md  SUMMARIZATION_BUG.md  app.py  chat.html  check_ws_auth.py  docker-compose.yml  langgraph.json  mcp_bridge.py  page.html  pyproject.toml  requirements.txt  test_ws_auth_live.py  verify_mcp.py
.claude/: settings.local.json
.claude/skills/: S3_CDN_DEPLOYMENT.md  llamabot-s3-cdn.md
.github/badges/: stars_last10.json
.github/workflows/: ci.yml  pytest.yml
app/: alembic.ini  chat.html  console.py  db.py  dependencies.py  init_pg_checkpointer.py  langgraph.json  main.py  mcp_server.py  models.py  page.html  register.html  run_tests.py
app/.leonardo/: LEONARDO.md
app/alembic/: README  env.py
app/assets/: chat.js  style.css
app/frontend/: chat.html  style.css
app/lib/: __init__.py  active_record.py
app/rails/: README.md
app/routers/: __init__.py  api.py  checkpoints.py  scheduled_jobs.py  slash_commands.py  ui.py  websocket.py
app/services/: __init__.py  auth_migration.py  checkpoint_cleanup.py  checkpoint_service.py  default_prompts.py  default_skills.py  headless_agent_executor.py  lease_manager.py  mothership_client.py  (+5 more)
assets/: page.css  page.js
backend/: app.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.old.md  package-lock.json  package.json  tailwind.config.js
scripts/: deploy-frontend-to-s3.sh  migrate_thread_metadata.py  setup-s3-bucket.sh
(+209 files in other folders)
